# cmake_cookbook

./: .gitignore  LICENSE  README.md
.history/: Makefile_20240412134709  Makefile_20240412141652
.history/docs/chapter_04/: 01-create-a-simple-unit-test_20240412134636.md  01-create-a-simple-unit-test_20240412135846.md  01-create-a-simple-unit-test_20240412135851.md  01-create-a-simple-unit-test_20240412135854.md  01-create-a-simple-unit-test_20240412135857.md  01-create-a-simple-unit-test_20240412135858.md  01-create-a-simple-unit-test_20240412135901.md  01-create-a-simple-unit-test_20240412135902.md  01-create-a-simple-unit-test_20240412135906.md  01-create-a-simple-unit-test_20240412135908.md  01-create-a-simple-unit-test_20240412135914.md  01-create-a-simple-unit-test_20240412135918.md  01-create-a-simple-unit-test_20240412135921.md  01-create-a-simple-unit-test_20240412135924.md  01-create-a-simple-unit-test_20240412135928.md  01-create-a-simple-unit-test_20240412135930.md  01-create-a-simple-unit-test_20240412135945.md  01-create-a-simple-unit-test_20240412135950.md  01-create-a-simple-unit-test_20240412135958.md  01-create-a-simple-unit-test_20240412140005.md  01-create-a-simple-unit-test_20240412140008.md  01-create-a-simple-unit-test_20240412140011.md  01-create-a-simple-unit-test_20240412140012.md  01-create-a-simple-unit-test_20240412140014.md  01-create-a-simple-unit-test_20240412140023.md  01-create-a-simple-unit-test_20240412140032.md  01-create-a-simple-unit-test_20240412140034.md  01-create-a-simple-unit-test_20240412140039.md  01-create-a-simple-unit-test_20240412140043.md  01-create-a-simple-unit-test_20240412140047.md  01-create-a-simple-unit-test_20240412140055.md  01-create-a-simple-unit-test_20240412140058.md  01-create-a-simple-unit-test_20240412140107.md  01-create-a-simple-unit-test_20240412140110.md  01-create-a-simple-unit-test_20240412140111.md  01-create-a-simple-unit-test_20240412140114.md  01-create-a-simple-unit-test_20240412140119.md  01-create-a-simple-unit-test_20240412140123.md  01-create-a-simple-unit-test_20240412140128.md  01-create-a-simple-unit-test_20240412140136.md  (+574 more)
.history/src/chapter_04/recipe-01/: CMakeLists_20240412141551.txt  CMakeLists_20240412141555.txt  CMakeLists_20240412141558.txt  CMakeLists_20240412141559.txt  CMakeLists_20240412141601.txt  CMakeLists_20240412141603.txt  CMakeLists_20240412141604.txt
docs/: introduction.md
docs/chapter_0/: 1-get-source-code.md  2-get-docker-image.md  3-install-necessery-software.md  install-necessery-software.md
docs/chapter_01/: 01-compile-single-source-to-elf-file.md  02-switch-generators.md  03-build-and-link-library.md  04-condition-statement-control-compile.md  05-show-option-to-user.md  06-set-compiler.md  07-switch-build-type.md  08-set-compiler-config.md  09-set-standard-for-language.md  10-using-control.md  compile-single-source-to-elf-file.md
docs/chapter_02/: 01-detect-os.md  02-platform-dependent-source-code.md  03-compiler-dependent-source-code.md  04-arch-dependent.md  05-detect-processor-instructions.md  06-enabling-vector-for-eigen.md
docs/chapter_03/: 00-introduction.md  01-detect-python.md  02-detect-python-lib.md
docs/chapter_04/: 01-create-a-simple-unit-test.md
src/chapter_01/recipe-01/: CMakeLists.txt
src/chapter_01/recipe-02/: CMakeLists.txt  helloworld.cpp
src/chapter_01/recipe-03/: CMakeLists.txt
src/chapter_01/recipe-04/: CMakeLists.txt  Message.cpp  Message.hpp  helloworld.cpp
src/chapter_01/recipe-06/: CMakeLists.txt
src/chapter_01/recipe-07/: CMakeLists.txt
src/chapter_01/recipe-08/: CMakeLists.txt
src/chapter_01/recipe-09/: CMakeLists.txt
src/chapter_01/recipe-10/: CMakeLists.txt
src/chapter_02/recipe-01/: CMakeLists.txt  build.sh
src/chapter_02/recipe-02/: CMakeLists.txt  build.sh  helloworld.cpp
src/chapter_02/recipe-03/: CMakeLists.txt
src/chapter_02/recipe-04/: CMakeLists.txt  arch-dependent.cpp  build.sh
src/chapter_02/recipe-05/: CMakeLists.txt  build.sh  processor-info.cpp
src/chapter_02/recipe-06/: CMakeLists.txt  build.sh  linear-algebra.cpp
src/chapter_03/recipe-01/: CMakeLists.txt  build.sh
src/chapter_03/recipe-04/: CMakeLists.txt  CxxBLAS.hpp  linear-algebra.cpp
src/chapter_03/recipe-08/: CMakeLists.txt  build.sh  path-info.cpp
src/chapter_04/recipe-01/: CMakeLists.txt  test.py  test.sh
